  * Rewrite copyright file in machine-readable format 1.0. The GIMP is now
    licensed under the (L)GPLv3+.
  * Pass -- -V -c4 to dh_makeshlibs.
  * Rename all .files files to .install, and stop calling dh_movefiles.
  * Rename BUILDDIR to “builddir”, as “build” is now a real directory in
    the distribution.
  * Add myself to Uploaders.

 -- Jordi Mallach <jordi@debian.org>  Sat, 05 May 2012 17:41:01 +0200

gimp (2.6.12-1) unstable; urgency=low

  * Imported Upstream version 2.6.12
  * Add ${misc:Depends} variables to packages that were missing it
  * Call default versioned python binary instead of just /usr/bin/python

 -- Ari Pollak <ari@debian.org>  Sat, 18 Feb 2012 16:59:00 -0500

gimp (2.6.11-8) unstable; urgency=low

  * Really add the patch this time (Closes: #651387)

 -- Ari Pollak <ari@debian.org>  Thu, 22 Dec 2011 09:39:20 -0500

gimp (2.6.11-7) unstable; urgency=low

  * poppler0.18.patch: Port file-pdf plugin to poppler 0.18 API. Patch taken
    from Fedora via Ubuntu.
    (Closes: #651387)

 -- Ari Pollak <ari@debian.org>  Sat, 10 Dec 2011 16:02:12 -0500

gimp (2.6.11-6) unstable; urgency=low

  * libpng_compile.patch:
      - Apply patch from upstream to fix compilation with libpng 1.5
        (Closes: #649972)

 -- Ari Pollak <ari@debian.org>  Tue, 29 Nov 2011 21:38:57 -0500

gimp (2.6.11-5) unstable; urgency=high

  * pyslice.patch: upstream patch to fix slice filter crashing (Closes: #644025)
  * Apply fix for GIF buffer overflow (CVE-2011-2896) (Closes: #643753)

 -- Ari Pollak <ari@debian.org>  Thu, 06 Oct 2011 21:46:58 -0400

gimp (2.6.11-4) unstable; urgency=low

  * string-format.patch: fix from upstream for build failures with
    -Werror=format-security, which is now the default with dpkg 1.16.1 and
    cdbs
    (Closes: #643388)
  * Improve gimp package description (Closes: #178293, #588898)
  * Move ghostscript to Recommends since it doesn't have many dependencies
  * Update README.MIDI for gimp 2.6 (it's about time).