@@ -1,4 +1,3 @@
-usr/lib/*.a
 usr/lib/*.so
 usr/lib/pkgconfig/
 usr/share/man/man1/gimptool-?.?.1
