@@ -26,6 +26,7 @@ gimp (2.8.0-1) UNRELEASED; urgency=low
   * Rename BUILDDIR to “builddir”, as “build” is now a real directory in
     the distribution.
   * Add myself to Uploaders.
+  * Configure with --disable-static and stop distributing .a files.
 
  -- Jordi Mallach <jordi@debian.org>  Sat, 05 May 2012 17:41:01 +0200
 
